Tests/Modules/Error/Nested/.build/throwinnererror.pr
{
  "name": "ThrowInnerError",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022inner error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "inner error",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/Nested/ThrowInnerError.goal",
  "prPath": "/Modules/Error/Nested/.build/throwinnererror.pr",
  "hash": "7d8dc891f5dc542946212b275eb7dd377c3208351c17761e0c6b02e233a7cc75",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}